--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "dependencies": {
     "@tanstack/react-query": "^4.29.5",
     "axios": "^1.4.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-table": "^7.8.0"
+    "react-hook-form": "^7.43.9",
+    "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/node": "^20.1.4",
     "@types/react": "^18.0.28",
+    "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.11",
     "@types/react-table": "^7.7.14",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -28,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
+    "react-error-overlay": "^6.0.9",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
